unpackaged/main/default/objects/CampaignToProgramTranspose__c/CampaignToProgramTranspose__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CampaignToProgramTranspose</label>
</CustomObject>