unpackaged/main/default/objects/CampaignToProgramTranspose__c/fields/ProgramFocus__c.field-meta.xml
<CustomField>
    <fullName>ProgramFocus__c</fullName>
    <label>Program Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>